--- a/style.css
+++ b/style.css
@@ -492,4 +492,13 @@ footer .copyright .pro-links i:hover{
         justify-content: center;
         align-items: center;
     }
+    footer .copyright .pro-links i{
+        margin-top: 15px;
+    }
+    footer .subscribe input{
+        margin-bottom: 20px;
+     }
+    footer .subscribe a{
+        margin-top: 20px;
+     }
 }
